--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -10,22 +10,40 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o app
 RUN git log -1 --oneline > version.txt
 
 FROM alpine:latest AS prod
-WORKDIR /root/
+WORKDIR /root
+
+RUN go install github.com/pressly/goose/v3/cmd/goose@latest
+COPY docker_build/start_prod.sh start.sh
+COPY migrations migrations
+
 COPY --from=builder /go/src/app/app .
 COPY --from=builder /go/src/app/config.json .
 COPY --from=builder /go/src/app/version.txt .
 
 EXPOSE 8080
 
-ENTRYPOINT ["./app"]
+ENTRYPOINT ["sh", "start.sh"]
 
 FROM golang:1.18 AS dev
-WORKDIR /root/
+WORKDIR /root
 
-WORKDIR /go/src/app
+COPY ca ca
 
 RUN go install github.com/pressly/goose/v3/cmd/goose@latest
-COPY docker_build/start.sh start.sh
+COPY docker_build/start_dev.sh start.sh
+COPY migrations migrations
+
+EXPOSE 8080
+
+ENTRYPOINT ["sh", "start.sh"]
+
+FROM golang:1.18 AS test
+WORKDIR /root
+
+COPY ca ca
+
+RUN go install github.com/pressly/goose/v3/cmd/goose@latest
+COPY docker_build/start_test.sh start.sh
 COPY migrations migrations
 
 EXPOSE 8080
