--- a/ca/tests/docker-compose.yml
+++ b/ca/tests/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  db:
+  db_test:
     image: postgres
     environment:
       - POSTGRES_USER=user
@@ -9,21 +9,21 @@ services:
       - POSTGRES_DB=db
     ports:
       - 5432:5432
-  cfssl:
+  
+  cfssl_test:
     build:
-      context: ..
+      context: ../..
       dockerfile: ./docker_build/Dockerfile
-      target: dev
-    container_name: cfssl
-    image: cfssl
+      target: test
+    container_name: cfssl_test
+    image: cfssl_test
     environment:
       - DB_DRIVER=postgres
-      - DB_URL=postgres://user:password@db/db?sslmode=disable
+      - DB_URL=postgres://user:password@db_test/db?sslmode=disable
     depends_on:
-      - db
+      - db_test
     volumes:
       - ~/Desktop/projects/mgw_local_certificates/ca_certs:/etc/certs
       #- /home/hannes/Desktop/projects/mgw_local_certificates/certificate-authority/ca:/go/src/app/ca
     ports:
       - 8080:8080
-    #command: migrate
