--- a/ca/tests/docker-compose.yml
+++ b/ca/tests/docker-compose.yml
@@ -9,11 +9,16 @@ services:
       - POSTGRES_DB=db
     ports:
       - 5432:5432
-  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      
   cfssl_test:
     build:
       context: ../..
-      dockerfile: ./docker_build/Dockerfile
+      dockerfile: ./build/Dockerfile
       target: test
     container_name: cfssl_test
     image: cfssl_test
@@ -21,8 +26,7 @@ services:
       - DB_DRIVER=postgres
       - DB_URL=postgres://user:password@db_test/db?sslmode=disable
     depends_on:
-      - db_test
-    volumes:
-      - ~/Desktop/projects/mgw_local_certificates/ca_certs:/etc/certs
+      db_test:
+        condition: service_healthy
     ports:
       - 8080:8080
