moved migrations and changed configuration handling

--- a/deployment/dev/docker-compose.yml
+++ b/deployment/dev/docker-compose.yml
@@ -18,12 +18,14 @@ services:
     image: ca
     environment:
       - DB_DRIVER=postgres
-      - DB_URL=postgres://user:password@db/db?sslmode=disable
+      - DB_USERNAME=user
+      - DB_PASSWORD=password
+      - DB_ADDR=db
+      - DB_DATABASE=db
     depends_on:
       - db
     volumes:
       - ~/Desktop/projects/mgw_local_certificates/ca_certs:/etc/certs
-      #- /home/hannes/Desktop/projects/mgw_local_certificates/certificate-authority/ca:/go/src/app/ca
     ports:
       - 8080:8080
-    command: migrate
+    command: sh /root/start.sh migrate_and_start
