--- a/deployment/dev/docker-compose.yml
+++ b/deployment/dev/docker-compose.yml
@@ -9,6 +9,12 @@ services:
       - POSTGRES_DB=db
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   cfssl:
     build:
       context: ../..
@@ -23,7 +29,8 @@ services:
       - DB_ADDR=db
       - DB_DATABASE=db
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ~/Desktop/projects/mgw_local_certificates/ca_certs:/etc/certs
     ports:
