--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,7 @@ jobs:
         run: docker compose -f deployment/test/docker-compose.yml up -d db_test
       - name: Run test container
         run: docker compose -f deployment/test/docker-compose.yml run cfssl_test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: /tmp/coverage.out
