--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       
   cfssl_test:
     build:
-      context: ../..
+      context: ..
       dockerfile: ./build/Dockerfile
       target: test
     container_name: cfssl_test
